terraform/main.tf
terraform {
 required_providers {
   aws = { source = "hashicorp/aws", version = "~> 5.0" }
 }
}
 
provider "aws" {
 region =us-east-1
}
 
data "aws_availability_zones" "available" {}
 
# VPC
resource "aws_vpc" "main" {
 cidr_block = var.vpc_cidr
 tags = { Name = "streamline-vpc" }
}
 
# IGW
resource "aws_internet_gateway" "igw" {
 vpc_id = aws_vpc.main.id
 tags = { Name = "streamline-igw" }
}
 
# Public subnets
resource "aws_subnet" "public" {
 count                   = 2
 vpc_id                  = aws_vpc.main.id
 cidr_block              = var.public_subnets[count.index]
 availability_zone       = data.aws_availability_zones.available.names[count.index]
 map_public_ip_on_launch = true
 tags = { Name = "streamline-public-${count.index + 1}" }
}
 
# Private subnets
resource "aws_subnet" "private" {
 count             = 2
 vpc_id            = aws_vpc.main.id
 cidr_block        = var.private_subnets[count.index]
 availability_zone = data.aws_availability_zones.available.names[count.index]
 tags = { Name = "streamline-private-${count.index + 1}" }
}
 
# Public route table
resource "aws_route_table" "public" {
 vpc_id = aws_vpc.main.id
 tags = { Name = "streamline-public-rt" }
}
 
resource "aws_route" "public_internet" {
 route_table_id         = aws_route_table.public.id
 destination_cidr_block = "0.0.0.0/0"
 gateway_id             = aws_internet_gateway.igw.id
}
 
resource "aws_route_table_association" "public_assoc" {
 count          = 2
 subnet_id      = aws_subnet.public[count.index].id
 route_table_id = aws_route_table.public.id
}
 
# Private route table (no NAT needed for this exam)
resource "aws_route_table" "private" {
 vpc_id = aws_vpc.main.id
 tags = { Name = "streamline-private-rt" }
}
 
resource "aws_route_table_association" "private_assoc" {
 count          = 2
 subnet_id      = aws_subnet.private[count.index].id
 route_table_id = aws_route_table.private.id
}
 
# Security Groups
resource "aws_security_group" "web_sg" {
 name        = "streamline-web-sg"
 description = "Allow HTTP and SSH"
 vpc_id      = aws_vpc.main.id
 
 ingress {
   from_port   = 80
   to_port     = 80
   protocol    = "tcp"
   cidr_blocks = ["0.0.0.0/0"]
 }
 
 ingress {
   from_port   = 22
   to_port     = 22
   protocol    = "tcp"
   cidr_blocks = [var.my_ip]
 }
 
 egress {
   from_port   = 0
   to_port     = 0
   protocol    = "-1"
   cidr_blocks = ["0.0.0.0/0"]
 }
 
 tags = { Name = "streamline-web-sg" }
}
 
resource "aws_security_group" "rds_sg" {
 name        = "streamline-rds-sg"
 description = "Allow MySQL only from web SG"
 vpc_id      = aws_vpc.main.id
 
 ingress {
   from_port       = 3306
   to_port         = 3306
   protocol        = "tcp"
   security_groups = [aws_security_group.web_sg.id]
 }
 
 egress {
   from_port   = 0
   to_port     = 0
   protocol    = "-1"
   cidr_blocks = ["0.0.0.0/0"]
 }
 
 tags = { Name = "streamline-rds-sg" }
}
 
# EC2 instances (2 in public subnets)
data "aws_ami" "amzn2" {
 most_recent = true
 owners      = ["amazon"]
 
 filter {
   name   = "name"
   values = ["amzn2-ami-hvm-*-x86_64-gp2"]
 }
}
 
resource "aws_instance" "web" {
 count                  = 2
 ami                    = ami-0b6c6ebed2801a5cb
 instance_type          = "t3.micro"
 subnet_id              = aws_subnet.public[count.index].id
 vpc_security_group_ids = [aws_security_group.web_sg.id]
 key_name               = var.key_name
 user_data              = file("${path.module}/userdata.sh")
 
 tags = { Name = "streamline-web-${count.index + 1}" }
}
 
# ALB
resource "aws_lb" "alb" {
 name               = "streamline-alb"
 load_balancer_type = "application"
 security_groups    = [aws_security_group.web_sg.id]
 subnets            = [for s in aws_subnet.public : s.id]
}
 
resource "aws_lb_target_group" "tg" {
 name     = "streamline-tg"
 port     = 80
 protocol = "HTTP"
 vpc_id   = aws_vpc.main.id
 health_check {
   path = "/"
 }
}
 
resource "aws_lb_target_group_attachment" "attach" {
 count            = 2
 target_group_arn = aws_lb_target_group.tg.arn
 target_id        = aws_instance.web[count.index].id
 port             = 80
}
 
resource "aws_lb_listener" "listener" {
 load_balancer_arn = aws_lb.alb.arn
 port              = 80
 protocol          = "HTTP"
 
 default_action {
   type             = "forward"
   target_group_arn = aws_lb_target_group.tg.arn
 }
}
 
# RDS Subnet Group
resource "aws_db_subnet_group" "db_subnets" {
 name       = "streamline-db-subnet-group"
 subnet_ids = [for s in aws_subnet.private : s.id]
}
 
resource "aws_db_instance" "mysql" {
 identifier             = "streamline-mysql"
 engine                 = "mysql"
 engine_version         = "8.0"
 instance_class         = "db.t3.micro"
 allocated_storage      = 20
 db_name                = var.db_name
 username               = var.db_Arundhu
 password               = var.db_Arundhu@12
 skip_final_snapshot    = true
 publicly_accessible    = false
 db_subnet_group_name   = aws_db_subnet_group.db_subnets.name
 vpc_security_group_ids = [aws_security_group.rds_sg.id]
}
